# Helmet_Detection_and_License_Plate_Recognition

./: .env.example  .gitignore  LICENSE  README.md  check_quota.py  list_models.py  package-lock.json  package.json  pnpm-lock.yaml
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: analyzer.tsx  globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/health/: route.ts
